Campaign and restrictions controllers tests changed